WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200735
Error thrown during "acceptNode" lookup is overridden
https://bugs.webkit.org/show_bug.cgi?id=200735
Summary
Error thrown during "acceptNode" lookup is overridden
Alexey Shvayka
Reported
2019-08-14 14:09:18 PDT
Test case: ``` let myError = {name: "test"}; let el = document.createElement("div"); el.append("node"); let walker = document.createTreeWalker(el, NodeFilter.SHOW_TEXT, { get acceptNode() { throw myError; } }); walker.firstChild(); ``` Actual: TypeError is thrown Expected: myError is thrown WPT:
https://github.com/web-platform-tests/wpt/pull/15122
WebIDL:
https://heycam.github.io/webidl/#call-a-user-objects-operation
(step 10.2) Both Firefox 68 and Chrome 76 throw correct error.
Attachments
Patch
(3.42 KB, patch)
2019-08-14 21:21 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2019-08-14 21:21:16 PDT
Created
attachment 376350
[details]
Patch
Ross Kirsling
Comment 2
2019-08-14 21:51:35 PDT
Comment on
attachment 376350
[details]
Patch r=me, as long as EWS is green
WebKit Commit Bot
Comment 3
2019-08-14 23:11:42 PDT
Comment on
attachment 376350
[details]
Patch Clearing flags on attachment: 376350 Committed
r248708
: <
https://trac.webkit.org/changeset/248708
>
WebKit Commit Bot
Comment 4
2019-08-14 23:11:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-08-14 23:12:16 PDT
<
rdar://problem/54334630
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug