Error thrown during "acceptNode" lookup is overridden https://bugs.webkit.org/show_bug.cgi?id=200735

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-08-14
Reviewed by Ross Kirsling.

LayoutTests/imported/w3c:

* web-platform-tests/dom/traversal/TreeWalker-acceptNode-filter-expected.txt:

Source/WebCore:

Test: imported/w3c/web-platform-tests/dom/traversal/TreeWalker-acceptNode-filter-expected.html

* bindings/js/JSCallbackData.cpp:
(WebCore::JSCallbackData::invokeCallback): Catch and return exception of callback->get call.

Canonical link: https://commits.webkit.org/214492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248708 268f45cc-cd09-0410-ab3c-d52691b4dbfc